@@ -5,33 +5,37 @@ https://gitlab.com/spenibus/greasemonkey-scripts
 
 
 escapistmagazine
-   - video download links
+    - video download links
 
 
 hitbox
-   - archive download links
-      - link text is formatted (a download manager such as DownThemAll can use that info for the filename)
-      - most of the link text is hidden for readability but remains useable regarding the previous point
+    - archive download links
+        - link text is formatted (a download manager such as DownThemAll can use that info for the filename)
+        - most of the link text is hidden for readability but remains useable regarding the previous point
 
 
 jeuxvideocom
-   - video download links
+    - video download links
+
+
+stackoverflow
+    - flags stats
 
 
 twitch
-   - quick links to popout and chat
-   - live playlist links
-   - archive download links
-      - link text is formatted (a download manager such as DownThemAll can use that info for the filename)
-      - most of the link text is hidden for readability but remains useable regarding the previous point
+    - quick links to popout and chat
+    - live playlist links
+    - archive download links
+        - link text is formatted (a download manager such as DownThemAll can use that info for the filename)
+        - most of the link text is hidden for readability but remains useable regarding the previous point
 
 
 youtube
-   - disables ytspf (ajax page loading & history.pushState)
-   - video download links
-      - link text is formatted (a download manager such as DownThemAll can use that info for the filename)
-      - some videos are "protected" and download will fail (I'm not annoyed enough to look into it)
-   - proxfree links
-   - sets wmode of embedded flash player to "direct"
-      - accelerated video rendering
-      - no hiccup on fullscreen switching
+    - disables ytspf (ajax page loading & history.pushState)
+    - video download links
+        - link text is formatted (a download manager such as DownThemAll can use that info for the filename)
+        - some videos are "protected" and download will fail (I'm not annoyed enough to look into it)
+    - proxfree links
+    - sets wmode of embedded flash player to "direct"
+        - accelerated video rendering
+        - no hiccup on fullscreen switching
